// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`transcribe.pdf given: [case1] --help flag when: [t0] help is requested then: usage info is displayed 1`] = `
"usage: transcribe.pdf.sh <pdf-path> [--into markdown]

extract text from image-based PDFs via Google Cloud Vision OCR.

args:
  <pdf-path>       path to the PDF file
  --into FORMAT    output format (default: markdown)
  --cache skip     bypass cache and force fresh OCR
  --help           show this help

examples:
  transcribe.pdf.sh document.pdf
  transcribe.pdf.sh document.pdf --into markdown
  transcribe.pdf.sh scanned.pdf --cache skip
"
`;

exports[`transcribe.pdf given: [case2] no PDF path provided when: [t0] skill is called without arguments then: error is returned 1`] = `
"
🦅 that wont work...

🔎 transcribe.pdf
   └─ blocked: no PDF path provided
"
`;

exports[`transcribe.pdf given: [case3] PDF file does not exist when: [t0] nonexistent file is specified then: error is returned 1`] = `
"
🦅 that wont work...

🔎 transcribe.pdf
   └─ blocked: file not found: /nonexistent/file.pdf
"
`;

exports[`transcribe.pdf given: [case4] unsupported output format when: [t0] invalid format is specified then: error is returned 1`] = `
"
🦅 that wont work...

🔎 transcribe.pdf
   └─ blocked: unsupported format: docx (only markdown supported)
"
`;

exports[`transcribe.pdf given: [case5] deterministic cached flow (uses fixture) when: [t0] cached result extant then: cache is used instead of OCR (no API calls) 1`] = `
"
🦅 found in cache,

🔎 transcribe.pdf
   ├─ source: /home/vlad/git/ehmpathy/_worktrees/rhachet-roles-rhight.vlad.permit-required/.temp/genTempDir.symlink/2026-04-11T22-13-49.473Z.transcribe-cached.c59f6646/.cache/patents/19399196/1.event.2025-11-24.office-action.pdf
   ├─ cached: /home/vlad/git/ehmpathy/_worktrees/rhachet-roles-rhight.vlad.permit-required/.temp/genTempDir.symlink/2026-04-11T22-13-49.473Z.transcribe-cached.c59f6646/.cache/patents/19399196/1.event.2025-11-24.office-action.md
   └─ format: markdown

## Page 1

PTOVAIA/01 (06-12)
Approved for use through 11/30/2020. OMB 0651-0032
U.S. Patent and Trademark Office; U.S. DEPARTMENT OF COMMERCE
Under the Paperwork Reduction Act of 1995, no persons are required to respond to a collection of information unless it displays a valid OMB control number.
DECLARATION (37 CFR 1.63) FOR UTILITY OR DESIGN APPLICATION USING AN
APPLICATION DATA SHEET (37 CFR 1.76)
Title of
Invention
CUTTER AND DRILL BIT DESIGN BY VIRTUAL TESTING WITH DIGITIZED ROCKS
[IS20.1688-US-NP]
As the below named inventor, I hereby declare that:
This declaration
is directed to:
The attached application, or
United States application or PCT International application number
November 12, 2021
filed on
The above-identified application was made or authorized to be made by me.
17/454,723
I believe that I am the original inventor or an original joint inventor of a claimed invention in the application.
I hereby acknowledge that any willful false statement made in this declaration is punishable under 18 U.S.C. 1001
by fine or imprisonment of not more than five (5) years, or both.
WARNING:
Petitioner/applicant is cautioned to avoid submitting personal information in documents filed in a patent application that may
contribute to identity theft. Personal information such as social security numbers, bank account numbers, or credit card numbers
(other than a check or credit card authorization form PTO-2038 submitted for payment purposes) is never required by the USPTO
to support a petition or an application. If this type of personal information is included in documents submitted to the USPTO.
petitioners/applicants should consider redacting such personal information from the documents before submitting them to the
USPTO. Petitioner/applicant is advised that the record of a patent application is available to the public after publication of the
application (unless a non-publication request in compliance with 37 CFR 1.213(a) is made in the application) or issuance of a
patent. Furthermore, the record from an abandoned application may also be available to the public if the application is
referenced in a published application or an issued patent (see 37 CFR 1.14). Checks and credit card authorization forms
PTO-2038 submitted for payment purposes are not retained in the application file and therefore are not publicly available.
LEGAL NAME OF INVENTOR
Inventor:
Signature:
Xiaoge Gan
Date (Optional):
Note: An application data sheet (PTO/SB/14 or equivalent), including naming the entire inventive entity, must accompany this form or must have
been previously filed. Use an additional PTO/AIA/01 form for each additional inventor.
This collection of information is required by 35 U.S.C. 115 and 37 CFR 1.63. The information is required to obtain or retain a benefit by the public which is to file (and
by the USPTO to process) an application. Confidentiality is governed by 35 U.S.C. 122 and 37 CFR 1.11 and 1.14. This collection is estimated to take 1 minute to
complete, including gathering, preparing, and submitting the completed application form to the USPTO. Time will vary depending upon the individual case. Any
comments on the amount of time you require to complate this form and/or suggestions for reducing this burden, should be sent to the Chief Information Officer, U.S.
Patent and Trademark Office, U.S. Department of Commerce, P.O. Box 1450, Alexandria, VA 22313-1450. DO NOT SEND FEES OR COMPLETED FORMS TO
THIS ADDRESS. SEND TO: Commissioner for Patents, P.O. Box 1450, Alexandria, VA 22313-1450.
If you need assistance in completing the form, call 1-800-PTO-9199 and select option 2.

## Page 2

PTO/AA/01 (06-12)
Approved for use through 11/30/2020. OMB 0651-0032
US. Parent and Trademark Office: US DEPARTMENT OF COMMERCE
the Paperwork Reduction Act of 1995, no persoxis we required to respond to a collection of information under it displays award O&B control number.
DECLARATION (37 CFR 1.63) FOR UTILITY OR DESIGN APPLICATION USING AN
APPLICATION DATA SHEET (37 CFR 1.76)
Title of
CUTTER AND DRILL BIT DESIGN BY VIRTUAL TESTING WITH DIGITIZED ROCKS
[IS20.1688-US-NP]
As the below named inventor, I hereby declare that:
This declara
is directed
The attached application, or
United States application or PCT international application number
November 12, 2021
filed on
The above-identified application was made or authorized to be made by me.
17/454,723
I believe that I am the original inventor or an original joint inventor of a claimed invention in the application
I hereby acknowledge that any willful false statement made in this declaration is punishable under 18 U.S.C. 1001
by fine or imprisonment of not more than five (5) years, or both.
WARNING:
Kapplicant is cautioned to avoid submitting personal informantes filed in a patent application that may
contribute to identity theft. Personal information such as social security numbers, bank account numbers, or credis ca
(other than a check or credit card authorization form PTO-2008 submitted for presyment purposes) is mever required by the USPTO
to support a petition or an application. If this type of personal information is included in documents submitted to the USPTO,
petitioners/applicants should consider redacting such personal information from the documents before submitting them to the
USPTO. Petitioner/applicant is advised that the record of a patent application is available to the public after publication of the
application (unless a non-publication request in compliance with 37 CFR 1.213(a) is made in the application) or issuance of a
patent. Furthermore, the record from an abandoned application may also be available to the public if the application is
referenced in a published application or an issued patent (see 37 CFR 1.14). Checks and credit card authorization forms
PTO
136 submitted for payment purposes are not retained in the application fee and therefore are not publicly available.
LEGAL NAME OF INVENTOR
Inventor:
Signature:
Ke Chen
Date (Optional): 11/19/202/
Notes: An again as sheet (PTO/SB/14 or equivalent), including mamming the entire inventive entity, must accompany this form or musi we
been previously fled. Use an additional PTO/AA form for each additional inventor
This collection of information is required by 35 U.S.C. 115 and 37 CFR 1.53. The information is required to obtain or retain a beneft by the public which is to file (and
by the USPTO to process) an application. Confidentiality is governed by 35 U.S.C. 122 and 37 CFR 1.11 and 1.14. This collection is estimated to take 1 minute to
complete, including gathering, preparing, and submitting the completed application form to the USPTO). Time wit vary depending upon the individuel case. Any
comments on the amount of time you require to complete this form andar sungquestiores for reducing this bunden, should be set to the Chief information Officer, U.S.
Patient and Trademark Offos, US Deportment of Commerce, PO Box 1490, Alexana, VA 22313-1453. DO NOT SEND FEES OR COMPLETED FORMS TO:
THIS ADDRESS SEND TO: Commissioner for Patents, P.O. Box 1450, Alexandria, VA 22313-1458
if you need assistance in completing the form, cat 1-800-770-3199 and select option 2.

## Page 3

PTO/AIA/01 (06-12)
Approved for use through 11/30/2020. OMB 0651-0032
U.S. Patent and Trademark Office; U.S. DEPARTMENT OF COMMERCE
Under the Paperwork Reduction Act of 1995, no persons are required to respond to a collection of information unless it displays a valid OMB control number.
DECLARATION (37 CFR 1.63) FOR UTILITY OR DESIGN APPLICATION USING AN
APPLICATION DATA SHEET (37 CFR 1.76)
Title of CUTTER AND DRILL BIT DESIGN BY VIRTUAL TESTING WITH DIGITIZED ROCKS
[IS20.1688-US-NP]
Invention
As the below named inventor, I hereby declare that:
This declaration
is directed to:
The attached application, or
United States application or PCT international application number
November 12, 2021
filed on
The above-identified application was made or authorized to be made by me.
17/454,723
I believe that I am the original inventor or an original joint inventor of a claimed invention in the application.
I hereby acknowledge that any willful false statement made in this declaration is punishable under 18 U.S.C. 1001
by fine or imprisonment of not more than five (5) years, or both,
WARNING:
Petitioner/applicant is cautioned to avoid submitting personal information in documents filed in a patent application that may
contribute to identity theft. Personal information such as social security numbers, bank account numbers, or credit card numbers
(other than a check or credit card authorization form PTO-2038 submitted for payment purposes) is never required by the USPTO
to support a petition or an application. If this type of personal information is included in documents submitted to the USPTO,
petitioners/applicants should consider redacting such personal information from the documents before submitting them to the
USPTO. Petitioner/applicant is advised that the record of a patent application is available to the public after publication of the
application (unless a non-publication request in compliance with 37 CFR 1.213(a) is made in the application) or issuance of a
patent. Furthermore, the record from an abandoned application may also be available to the public if the application is
referenced in a published application or an issued patent (see 37 CFR 1.14). Checks and credit card authorization forms
PTO-2038 submitted for payment purposes are not retained in the application file and therefore are not publicly available.
LEGAL NAME OF INVENTOR
Yansong Huang
Inventor:
Signature:
黄岩松
Date (Optional): Nov. 19 2021
Note: An application data sheet (PTO/SB/14 or equivalent), including naming the entire inventive entity, must accompany this form or must have
been previously filed. Use an additional PTO/AIA/01 form for each additional inventor.
This collection of information is required by 35 U.S.C. 115 and 37 CFR 1.53. The information is required to obtain or retain a benefit by the public which is to file (and
by the USPTO to process) an application. Confidentiality is governed by 35 U.S.C. 122 and 37 CFR 1.11 and 1.14. This collection is estimated to take 1 minute to
complete, including gathering, preparing, and submitting the completed application form to the USPTO. Time will vary depending upon the individual case. Any
comments on the amount of time you require to complete this form and/or suggestions for reducing this burden, should be sent to the Chief Information Officer, U.S.
Patent and Trademark Office, U.S. Department of Commerce, P.O. Box 1450, Alexandria, VA 22313-1450. DO NOT SEND FEES OR COMPLETED FORMS TO
THIS ADDRESS. SEND TO: Commissioner for Patents, P.O. Box 1450, Alexandria, VA 22313-1450.
If you need assistance in completing the form, call 1-800-PTO-9199 and select option 2.

## Page 4

PTO/AIA/01 (06-12)
Approved for use through 11/30/2020. OMB 0651-0032
U.S. Patent and Trademark Office; U.S. DEPARTMENT OF COMMERCE
Under the Paperwork Reduction Act of 1995, no persons are required to respond to a collection of information unless it displays a valid OMB control number.
DECLARATION (37 CFR 1.63) FOR UTILITY OR DESIGN APPLICATION USING AN
APPLICATION DATA SHEET (37 CFR 1.76)
Title of
Invention
CUTTER AND DRILL BIT DESIGN BY VIRTUAL TESTING WITH DIGITIZED ROCKS
[IS20.1688-US-NP]
As the below named inventor, I hereby declare that:
This declaration
is directed to:
The attached application, or
United States application or PCT international application number
November 12, 2021
filed on
The above-identified application was made or authorized to be made by me.
17/454,723
I believe that I am the original inventor or an original joint inventor of a claimed invention in the application.
I hereby acknowledge that any willful false statement made in this declaration is punishable under 18 U.S.C. 1001
by fine or imprisonment of not more than five (5) years, or both.
WARNING:
Petitioner/applicant is cautioned to avoid submitting personal information in documents filed in a patent application that may
contribute to identity theft. Personal information such as social security numbers, bank account numbers, or credit card numbers
(other than a check or credit card authorization form PTO-2038 submitted for payment purposes) is never required by the USPTO
to support a petition or an application. If this type of personal information is included in documents submitted to the USPTO,
petitioners/applicants should consider redacting such personal information from the documents before submitting them to the
USPTO. Petitioner/applicant is advised that the record of a patent application is available to the public after publication of the
application (unless a non-publication request in compliance with 37 CFR 1.213(a) is made in the application) or issuance of a
patent. Furthermore, the record from an abandoned application may also be available to the public if the application is
referenced in a published application or an issued patent (see 37 CFR 1.14). Checks and credit card authorization forms
PTO-2038 submitted for payment purposes are not retained in the application file and therefore are not publicly available.
LEGAL NAME OF INVENTOR
Inventor:
Paul Bolchover
8.
Signature:
Date (Optional): 11Jan 2022
Note: An application data sheet (PTO/SB/14 or equivalent), including naming the entire inventive entity, must accompany this form or must have
been previously filed. Use an additional PTO/AIA/01 form for each additional inventor.
This collection of information is required by 35 U.S.C. 115 and 37 CFR 1.63. The information is required to obtain or retain a benefit by the public which is to file (and
by the USPTO to process) an application. Confidentiality is governed by 35 U.S.C. 122 and 37 CFR 1.11 and 1.14. This collection is estimated to take 1 minute to
complete, including gathering, preparing, and submitting the completed application form to the USPTO. Time will vary depending upon the individual case. Any
comments on the amount of time you require to complete this form and/or suggestions for reducing this burden, should be sent to the Chief Information Officer, U.S.
Patent and Trademark Office, U.S. Department of Commerce, P.O. Box 1450, Alexandria, VA 22313-1450. DO NOT SEND FEES OR COMPLETED FORMS TO
THIS ADDRESS. SEND TO: Commissioner for Patents, P.O. Box 1450, Alexandria, VA 22313-1450.
If you need assistance in completing the form, call 1-800-PTQ-9199 and select option 2.

## Page 5

Privacy Act Statement
The Privacy Act of 1974 (P.L. 93-579) requires that you be given certain information in connection
with your submission of the attached form related to a patent application or patent. Accordingly,
pursuant to the requirements of the Act, please be advised that: (1) the general authority for the
collection of this information is 35 U.S.C. 2(b)(2); (2) furnishing of the information solicited is voluntary;
and (3) the principal purpose for which the information is used by the U.S. Patent and Trademark
Office is to process and/or examine your submission related to a patent application or patent. If you do
not furnish the requested information, the U.S. Patent and Trademark Office may not be able to
process and/or examine your submission, which may result in termination of proceedings or
abandonment of the application or expiration of the patent.
The information provided by you in this form will be subject to the following routine uses:
1. The information on this form will be treated confidentially to the extent allowed under the
Freedom of Information Act (5 U.S.C. 552) and the Privacy Act (5 U.S.C 552a). Records from
this system of records may be disclosed to the Department of Justice to determine whether
disclosure of these records is required by the Freedom of Information Act.
2. A record from this system of records may be disclosed, as a routine use, in the course of
presenting evidence to a court, magistrate, or administrative tribunal, including disclosures to
opposing counsel in the course of settlement negotiations.
3. A record in this system of records may be disclosed, as a routine use, to a Member of
Congress submitting a request involving an individual, to whom the record pertains, when the
individual has requested assistance from the Member with respect to the subject matter of the
record.
4. A record in this system of records may be disclosed, as a routine use, to a contractor of the
Agency having need for the information in order to perform a contract. Recipients of
information shall be required to comply with the requirements of the Privacy Act of 1974, as
amended, pursuant to 5 U.S.C. 552a(m).
5. A record related to an International Application filed under the Patent Cooperation Treaty in
this system of records may be disclosed, as a routine use, to the International Bureau of the
World Intellectual Property Organization, pursuant to the Patent Cooperation Treaty.
6. A record in this system of records may be disclosed, as a routine use, to another federal
agency for purposes of National Security review (35 U.S.C. 181) and for review pursuant to
the Atomic Energy Act (42 U.S.C. 218(c)).
7. A record from this system of records may be disclosed, as a routine use, to the Administrator,
General Services, or his/her designee, during an inspection of records conducted by GSA as
part of that agency's responsibility to recommend improvements in records management
practices and programs, under authority of 44 U.S.C. 2904 and 2906. Such disclosure shall
be made in accordance with the GSA regulations governing inspection of records for this
purpose, and any other relevant (i.e., GSA or Commerce) directive. Such disclosure shall not
be used to make determinations about individuals.
8. A record from this system of records may be disclosed, as a routine use, to the public after
either publication of the application pursuant to 35 U.S.C. 122(b) or issuance of a patent
pursuant to 35 U.S.C. 151. Further, a record may be disclosed, subject to the limitations of 37
CFR 1.14, as a routine use, to the public if the record was filed in an application which
became abandoned or in which the proceedings were terminated and which application is
referenced by either a published application, an application open to public inspection or an
issued patent.
9. A record from this system of records may be disclosed, as a routine use, to a Federal, State,
or local law enforcement agency, if the USPTO becomes aware of a violation or potential
violation of law or regulation.


"
`;

exports[`transcribe.pdf given: [case6] valid scanned PDF (LIVE API) when: [t0] OCR is performed on a real document then: text is extracted and cached 1`] = `
"
🦅 let me read that,

🔎 transcribe.pdf
   ├─ source: /home/vlad/git/ehmpathy/_worktrees/rhachet-roles-rhight.vlad.permit-required/.temp/genTempDir.symlink/2026-04-11T22-13-49.782Z.transcribe-live.b35d73db/.cache/patents/19399196/1.event.2025-11-24.office-action.pdf
   ├─ pages: 5
   └─ format: markdown

## Page 1
"
`;
